# JARVIS

./: .dockerignore  .gitignore  Dockerfile  README.md  brain.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh  run_web.bat  run_web.ps1  run_web.sh  stt.py  system_agent.py  tts.py
.github/workflows/: ci.yml
jarvis/: __init__.py  agentic_loop.py  brain.py  config.py  fallback_matcher.py  main.py  stt.py  system_agent.py  tts.py  web_app.py
jarvis/static/: script.js  style.css
jarvis/templates/: index.html
tests/: test_agentic_loop.py  test_brain.py  test_brain_fallback.py  test_config.py  test_fallback_matcher.py  test_integration.py  test_main_web.py
