[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-voice-assistant"
version = "1.0.0"
description = "J.A.R.V.I.S. Personal Voice Assistant"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "SpeechRecognition>=3.10.0",
    "pyaudio>=0.2.14",
    "sounddevice>=0.4.6",
    "psutil>=5.9.0",
    "numpy>=1.24.0",
    "google-genai>=0.3.0",
    "openai>=1.0.0",
    "edge-tts>=7.0.0",
    "miniaudio>=1.50",
    "flask>=3.0.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
jarvis = "jarvis.main:main"
jarvis-web = "jarvis.web_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*"]

[tool.setuptools.package-data]
jarvis = ["templates/*", "static/*"]
